add some new vulns
